@@ -7,9 +7,13 @@
       return Sizzle(selector, null, null, [element]).length === 1;
     };
 
-    this.select = function select(selector, context) {
-      return Sizzle(selector, context, Fuse.List());
-    };
+    this.select = Feature('ELEMENT_EXTENSIONS')
+      ? function select(selector, context) {
+          return Sizzle(selector, context, Fuse.List());
+        }
+      : function select(selector, context) {
+          return Sizzle(selector, context, Fuse.List()).map(Element.extend);
+        };
 
     // prevent JScript bug with named function expressions
     var match = null, select = null;
